# TrustlessTask

./: .env.example  .gitignore  .vercelignore  BLOCKCHAIN_FLOW.md  BLOCKCHAIN_INTEGRATION_GUIDE.md  BLOCKCHAIN_TRANSACTIONS.md  BLOCKFROST_SETUP_GUIDE.md  BUGFIXES.md  COMPLETE_SETUP_GUIDE.md  CONTRACT_TEST_RESULTS.md  CONTRACT_VERIFICATION.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  GITHUB_SETUP.md  HOW_TO_USE.md  METADATA_STRUCTURE.md  MOBILE_UPDATE_SUMMARY.md  NAMI_LACE_GUIDE.md  PRODUCTION_BLOCKCHAIN_ISSUE.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_BLOCKCHAIN.md  README.md  REAL_BLOCKCHAIN_SETUP.md  REAL_PROJECT_GUIDE.md  REAL_TRANSACTIONS_GUIDE.md  RUNNING_PROJECT.md  TEST_REAL_TRANSACTIONS.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX.md  VERCEL_MOBILE_FIX.md  WALLET_CONNECTION_GUIDE.md  WALLET_TROUBLESHOOTING.md  package-lock.json  package.json  test-api.ps1  test-api.sh  vercel.json
backend/: trustless-task-api.cabal
backend-api/: package-lock.json  package.json
backend-api/data/: db.json
backend-api/src/: server.ts
backend-api/src/db/: database.ts
backend-api/src/models/: Dispute.ts  Project.ts  User.ts
backend-api/src/routes/: disputes.ts  projects.ts  users.ts
backend-api/src/services/: cardano-tx.ts
backend/app/: Main.hs
backend/src/TrustlessTask/: API.hs  Database.hs
backend/src/TrustlessTask/API/: Handlers.hs  Types.hs
backend/src/TrustlessTask/Cardano/: Client.hs
contracts/: cabal.project  trustless-task-contracts.cabal
contracts/app/: Main.hs
contracts/src/TrustlessTask/: Dispute.hs  Escrow.hs  Reputation.hs  Types.hs  Utils.hs
contracts/test/: Spec.hs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SMART_CONTRACTS.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.d.ts  index.css  vite-env.d.ts
frontend/src/components/: CreateProjectForm.tsx  ProjectCard.tsx  WalletDetector.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/pages/: CreateProjectPage.tsx  ProfilePage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx
frontend/src/services/: api.ts  cardano.ts  mockData.ts
frontend/src/types/: index.ts
scripts/: deploy.sh
